# UI-Group-Project

./: CMakeLists.txt  README.md  compliance_page.cpp  compliance_page.hpp  dashboard.cpp  dashboard.hpp  dashboard_item.cpp  dashboard_item.hpp  dataset.cpp  dataset.hpp  environmental_litter_page.cpp  environmental_litter_page.hpp  flowlayout.cpp  flowlayout.h  fluorinated_compounds_page.cpp  fluorinated_compounds_page.hpp  location_dataset.cpp  location_dataset.hpp  main.cpp  model.cpp  model.hpp  page.cpp  page.hpp  persistent_organic_pollutants_page.cpp  persistent_organic_pollutants_page.hpp  pollutant_card.cpp  pollutant_card.hpp  pollutant_dataset.cpp  pollutant_dataset.hpp  pollutant_overview_page.cpp  pollutant_overview_page.hpp  sample.cpp  sample.hpp  simple button  style.qss  window.cpp  window.hpp
i18n/: watertool_fr.ts
